--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-mailchimp-subscribe": "^2.1.3",
+    "react-messenger-customer-chat": "^0.8.0",
     "react-rating": "^2.0.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
